--- a/vue/vuestagram2/package.json
+++ b/vue/vuestagram2/package.json
@@ -11,7 +11,8 @@
     "axios": "^1.5.0",
     "core-js": "^3.8.3",
     "mitt": "^3.0.1",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
