--- a/next/forum/package.json
+++ b/next/forum/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "mongodb": "^6.1.0",
     "next": "13.5.4",
+    "next-auth": "^4.21.1",
     "react": "^18",
     "react-dom": "^18"
   }
